# kernel_slicer

./: CMakeLists.txt  class_gen_ipv.cpp
apps/07_bvhStupidPT/: CMakeLists.txt  compile_rtx_shaders.py  main.cpp  raygen.rgen  raygen.rgen.spv  rayhit.rchit  rayhit.rchit.spv  raymiss.rmiss  raymiss.rmiss.spv  rtx.comp  test_class.cpp  test_class.h  test_class_generated_rtx.cpp  test_class_generated_rtx.h  test_class_generated_rtx_ds.cpp  test_class_gpu_rtx.cpp  z_generated.cl
apps/07_bvhStupidPT/include/: glsl_common.h
apps/19_simple_2d_cfd_solver/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h  test_class_gpu.cpp  test_class_gpu.h
apps/19_simple_2d_cfd_solver/values_checker/: check_values.py  values.txt
apps/20_updated_cfd_solver/: CMakeLists.txt  build.sh  main.cpp  test_class.cpp  test_class.h
apps/20_updated_cfd_solver/include/: stb_image_write.h
apps/20_updated_cfd_solver/src/: Configuration.cpp  Configuration.h  GridElement.cpp  GridElement.h  SimpleRenderer.cpp  SimpleRenderer.h  main.cpp  test_class.cpp  test_class.h
apps/20_updated_cfd_solver/src/conf/: Configuration.cpp  Configuration.h  ConfigurationBuilder.cpp  ConfigurationBuilder.h
apps/20_updated_cfd_solver/src/render/: IRenderer.h  SimpleRenderer.cpp  SimpleRenderer.h  VulkanRender.cpp  VulkanRender.h
apps/20_updated_cfd_solver/test/: solver_test.h
apps/20_updated_cfd_solver/util/: gif_creator.py
